--- a/content/enterprise/before-installing/data-storage-requirements/disk-requirements.mdx
+++ b/content/enterprise/before-installing/data-storage-requirements/disk-requirements.mdx
@@ -45,7 +45,7 @@ For example, with RedHat-flavor (RHEL, CentOS, Oracle Linux) images in Azure Clo
 
 ## Database Maintenance
 
-There are three CLI commands available as of v202005-2 to facilitate management of the PostgreSQL database that runs on the host as part of the Mounted Disk (and demo) operational mode:
+There are three CLI commands available as of v202005-2 to facilitate management of the PostgreSQL database that runs on the host as part of the Mounted Disk operational mode:
 
 * `replicated admin db-backup`: This will run a `pg_dump` and store the backup in `/backup/ptfe.db` on the host.
 * `replicated admin db-restore`: This will run a `pg_restore` using `/backup/ptfe.db` as it's data source.
