--- a/content/enterprise/before-installing/reference-architecture/azure.mdx
+++ b/content/enterprise/before-installing/reference-architecture/azure.mdx
@@ -41,7 +41,7 @@ Depending on the chosen [operational
 mode](/enterprise/before-installing/#operational-mode-decision),
 the infrastructure requirements for Terraform Enterprise range from a single [Azure VM
 instance](https://azure.microsoft.com/en-us/services/virtual-machines/) for
-demo or proof of concept installations to multiple instances connected to
+mounted disk installations to multiple instances connected to
 [Azure Database for PostgreSQL](https://azure.microsoft.com/en-us/services/postgresql/) and
 [Azure Blob Storage](https://azure.microsoft.com/en-us/services/storage/blobs/) for a stateless production installation.
 
