--- a/content/enterprise/system-overview/reliability-availability.mdx
+++ b/content/enterprise/system-overview/reliability-availability.mdx
@@ -54,7 +54,7 @@ role when considering the reliability of the overall system:
 ## Operation Modes
 
 This section describes how to set up your Terraform Enterprise deployment to recover from
-failures in the various operational modes (_Demo_, _Mounted Disk_, _External_
+failures in the various operational modes (_Mounted Disk_, _External_
 _Services_). The operational mode is selected at install time and can not be
 changed once the install is running.
 
@@ -70,7 +70,6 @@ _Data Location_
 
 |                     | Configuration                        | Vault                                                                                        | PostgreSQL                           | Blob Storage                         |
 | ------------------- | ------------------------------------ | -------------------------------------------------------------------------------------------- | ------------------------------------ | ------------------------------------ |
-| _Demo_              | Stored in Docker volumes on instance | Key material is stored in Docker volumes on instance, storage backend is internal PostgreSQL | Stored in Docker volumes on instance | Stored in Docker volumes on instance |
 | _Mounted Disk_      | Stored in Docker volumes on instance | Key material on host in `/var/lib/tfe-vault`, storage backend is mounted disk PostgreSQL     | Stored in mounted disks              | Stored in mounted disks              |
 | _External Services_ | Stored in Docker volumes on instance | Key material on host in `/var/lib/tfe-vault`, storage backend is external PostgreSQL         | Stored in external service           | Stored in external service           |
 | External Vault      | -                                    | Key material in external Vault with user-defined storage backend                             | -                                    | -                                    |
@@ -79,25 +78,9 @@ _Backup and Restore Responsibility_
 
 |                     | Configuration        | Vault                | PostgreSQL           | Blob Storage         |
 | ------------------- | -------------------- | -------------------- | -------------------- | -------------------- |
-| _Demo_              | Terraform Enterprise | Terraform Enterprise | Terraform Enterprise | Terraform Enterprise |
 | _Mounted Disk_      | Terraform Enterprise | Terraform Enterprise | User                 | User                 |
 | _External Services_ | Terraform Enterprise | Terraform Enterprise | User                 | User                 |
 | External Vault      | -                    | User                 | -                    | -                    |
-
-### Demo
-
-All data (Configuration, PostgreSQL, Blob Storage, Vault) is stored within
-Docker volumes on the instance.
-
-**Snapshot:** The built-in Snapshot mechanism can be used to package up
-all data and store it off the instance. The frequency of automated snapshots can
-be configured hourly such that the worst-case data loss can be as low as 1 hour.
-
-**Restore:** If the instance running Terraform Enterprise is lost, the only recovery
-mechanism in _Demo_ mode is to create a new instance and use the builtin Restore
-mechanism to recreate it from a previous snapshot.
-
-[Configure Snapshot and Restore following these instructions](/enterprise/admin/infrastructure/automated-recovery).
 
 ### Mounted Disk
 
