--- a/content/enterprise/before-installing/data-storage-requirements/postgres-requirements.mdx
+++ b/content/enterprise/before-installing/data-storage-requirements/postgres-requirements.mdx
@@ -47,7 +47,7 @@ CREATE EXTENSION IF NOT EXISTS "citext" WITH SCHEMA "registry";
 
 When providing optional extra keyword parameters for the database connection,
 note an additional restriction on the `sslmode` parameter is that only the
-`require`, `verify-full`, `verify-ca`, and `disable` values are allowed. The default value of `sslmode` is set to `require` with _External Services_ installation or `disable` with _Demo_ installation.
+`require`, `verify-full`, `verify-ca`, and `disable` values are allowed. The default value of `sslmode` is set to `require` for _External Services_ installations or `disable` for _Mounted Disk_ installations.
 
 -> **Note:** See the PostgreSQL library documentation for more about [extra parameters related to sslmode](https://www.postgresql.org/docs/12/libpq-ssl.html). Terraform Enterprise provides a certificates file at `/tmp/cust-ca-certificates.crt`, which is required by the `verify-full` and `verify-ca` modes. Additional certificates can be added via the [CA Custom Bundle](/enterprise/install/interactive/installer#certificate-authority-ca-bundle) setting.
 
@@ -55,6 +55,6 @@ note an additional restriction on the `sslmode` parameter is that only the
 
 ## PostgreSQL 9.5 to 12 Upgrade
 
-In Terraform Enterprise v202103-1, the internally-managed PostgreSQL server has been upgraded from PostgreSQL 9.5 to PostgreSQL 12. This change only affects mounted disk and proof of concept installations.
+In Terraform Enterprise v202103-1, the internally-managed PostgreSQL server has been upgraded from PostgreSQL 9.5 to PostgreSQL 12. This change only affects mounted disk installations.
 
 For more details, consult the v202103-1 [release notes](https://github.com/hashicorp/terraform-enterprise-release-notes/blob/master/v202103-1.md).
