--- a/content/enterprise/before-installing/reference-architecture/aws.mdx
+++ b/content/enterprise/before-installing/reference-architecture/aws.mdx
@@ -38,7 +38,7 @@ architecture.
 Depending on the chosen [operational
 mode](/enterprise/before-installing/#operational-mode-decision),
 the infrastructure requirements for Terraform Enterprise range from a single AWS EC2 instance
-for demo installations to multiple instances connected to RDS and S3 for a
+for mounted disk installations to multiple instances connected to RDS and S3 for a
 stateless production installation.
 
 The following table provides high-level server guidelines. Of particular
