--- a/content/enterprise/before-installing/reference-architecture/gcp.mdx
+++ b/content/enterprise/before-installing/reference-architecture/gcp.mdx
@@ -38,7 +38,7 @@ architecture.
 Depending on the chosen [operational
 mode](/enterprise/before-installing/#operational-mode-decision),
 the infrastructure requirements for Terraform Enterprise range from a single Cloud Compute VM instance
-for demo installations to multiple instances connected to Cloud SQL and Cloud Storage for a
+for mounted disk installations to multiple instances connected to Cloud SQL and Cloud Storage for a
 stateless production installation.
 
 The following table provides high-level server guidelines. Of particular
