--- a/content/enterprise/system-overview/capacity.mdx
+++ b/content/enterprise/system-overview/capacity.mdx
@@ -68,7 +68,7 @@ I/O to IOPS that are credited per disk, it's important to provision a minimum nu
 stalls. Low disk I/O can create significant performance issues. 
 
 This resource is harder to predict than memory or CPU usage because it varies per Terraform module,
-but in general we recommend a minimum of 50 IOPS per concurrent Terraform run. So if an instance is configured for 10 concurrent runs, the disk should have 500 IOPS allocated. For reference, on AWS, an EBS volume
+but we generally recommend a minimum of 50 IOPS per concurrent Terraform run. So if an instance is configured for 10 concurrent runs, the disk should have 500 IOPS allocated. For reference, on AWS, an EBS volume
 with an allocated size of 250 GB comes with a steady state of 750 IOPS.
 
 We recommend using a disk with a minimum of 500 IOPS, but high load systems should consider increasing this significantly. For example, a production instance with a consistently high level of utilization and a concurrency of 10 should ideally have a disk with about 3,000 IOPS. Internal testing has shown performance increases with additional IOPs up to 8,000. Scaling the disk beyond 8,000 IOPs does not significantly improve performance.
