--- a/content/enterprise/before-installing/os-specific/rhel-requirements.mdx
+++ b/content/enterprise/before-installing/os-specific/rhel-requirements.mdx
@@ -29,9 +29,11 @@ Afterwards, restart the Docker service and verify the newly installed version us
 
 ## FAQ
 
-### Can I use the Docker version in the RHEL Extras repository?
+### Can I use the Docker version in the RHEL Extras Repository?
 
-Yes! Just be sure to [modify the default `libseccomp` profile](/enterprise/before-installing#option-3-docker-engine-using-a-modified-libseccomp-profile).
+Yes, if you are running Red Hat Enterprise Linux v7. If you are running v7 and choose to run Docker from the Extra Packages for Enterprise Linux (EPEL) repository, you must [modify the default `libseccomp` profile](/enterprise/before-installing#option-3-docker-engine-using-a-modified-libseccomp-profile).
+
+Red Hat Enterprise Linux v8 does not offer docker in the EPEL repository.
 
 ### When I run the installer, it allows me to download and install Docker CE on RedHat. Can I use that?
 
