Update docs to reflect being able to create configuration versions with the queue plans permission

--- a/content/cloud-docs/api-docs/configuration-versions.mdx
+++ b/content/cloud-docs/api-docs/configuration-versions.mdx
@@ -42,7 +42,7 @@ page_title: Configuration Versions - API Docs - Terraform Cloud and Terraform En
 
 A configuration version (`configuration-version`) is a resource used to reference the uploaded configuration files. It is associated with the run to use the uploaded configuration files for performing the plan and apply.
 
-You need read runs permission to list and view configuration versions for a workspace, and you need apply runs permission to create new configuration versions. Refer to the [permissions](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) documentation for more details.
+You need read runs permission to list and view configuration versions for a workspace, and you need queue plans permission to create new configuration versions. Refer to the [permissions](/cloud-docs/users-teams-organizations/permissions#general-workspace-permissions) documentation for more details.
 
 [permissions-citation]: #intentionally-unused---keep-for-maintainers
 
