--- a/content/cloud-docs/api-docs/run-tasks-integration.mdx
+++ b/content/cloud-docs/api-docs/run-tasks-integration.mdx
@@ -10,13 +10,12 @@ page_title: Run Tasks Integration - API Docs - Terraform Cloud and Terraform Ent
 
 # Run Tasks Integration API
 
--> Note: As of September 2021, Run Tasks are available only as a beta feature, are subject to change, and not all customers will see this functionality in their Terraform Cloud organization.
+-> Note: Run Tasks are available only as a beta feature, are subject to change, and not all customers will see this functionality in their Terraform Cloud organization.
 
 [Run tasks](/cloud-docs/workspaces/settings/run-tasks) allow Terraform Cloud to interact with external systems at specific points in the Terraform Cloud run lifecycle.
-Run tasks are reusable configurations that you can attach to any workspace in an organization.
-This page lists the API endpoints which are used when triggering a Run Task and the expected response from the integration.
+This page lists the API endpoints used to trigger a run task and the expected response from the integration.
 
-You can find more information about managing Run Tasks within Terraform Cloud in [Run Tasks Management](/cloud-docs/api-docs/run-tasks) documentation.
+Refer to [Run Tasks](/cloud-docs/api-docs/run-tasks) for the API endpoints to create and manage Run Tasks within Terraform Cloud.
 
 ## Run Task Request
 
@@ -43,7 +42,7 @@ The POST request submits a JSON object with the following properties as a reques
 | `access_token`                  | string  |                          | Bearer token to use when calling back to Terraform Cloud.                                                   |
 | `stage`                         | string  | `post-plan`, `pre-apply` | The [stage](/cloud-docs/run/states) the task was triggered at.                                              |
 | `is_speculative`                | bool    |                          | Whether the task is part of a [speculative run](/cloud-docs/run#speculative-plans).                         |
-| `task_result_id`                | string  |                          | Id of task result within Terraform Cloud.                                                                   |
+| `task_result_id`                | string  |                          | ID of task result within Terraform Cloud.                                                                   |
 | `task_result_enforcement_level` | string  | `mandatory`, `advisory`  | Enforcement level for this task.                                                                            |
 | `task_result_callback_url`      | string  |                          | URL that should called back with the result of this task.                                                   |
 | `run_id`                        | string  |                          | Id of the run this task is part of.                                                                         |
@@ -55,11 +54,11 @@ The POST request submits a JSON object with the following properties as a reques
 | `workspace_name`                | string  |                          | Name of the workspace.                                                                                      |
 | `workspace_app_url`             | string  |                          | URL within Terraform Cloud to the workspace.                                                                |
 | `organization_name`             | string  |                          | Name of the organization the task is configured within.                                                     |
-| `plan_json_api_url`             | string  |                          | URL to retrieve the JSON Terraform Plan for this run.                                                       |
-| `vcs_repo_url`                  | string  |                          | URL to the workspace's VCS repository. `null` if the workspace does not have a VCS repository.              |
-| `vcs_branch`                    | string  |                          | Repository branch that the workspace executes from. `null` if the workspace does not have a VCS repository. |
-| `vcs_pull_request_url`          | string  |                          | URL to the Pull Request/Merge Request that triggered this run. `null` if the run was not triggered.         |
-| `vcs_commit_url`                | string  |                          | URL to the commit that triggered this run. `null` if the workspace does not a VCS repository.               |
+| `plan_json_api_url`             | string  |                          | URL to retrieve the JSON Terraform plan for this run.                                                       |
+| `vcs_repo_url`                  | string  |                          | URL to the workspace's VCS repository. This is `null` if the workspace does not have a VCS repository.              |
+| `vcs_branch`                    | string  |                          | Repository branch that the workspace executes from. This is `null` if the workspace does not have a VCS repository. |
+| `vcs_pull_request_url`          | string  |                          | URL to the Pull Request/Merge Request that triggered this run. This is `null` if the run was not triggered.         |
+| `vcs_commit_url`                | string  |                          | URL to the commit that triggered this run. This is `null` if the workspace does not a VCS repository.               |
 
 ### Sample Payload
 
@@ -97,11 +96,11 @@ The POST request submits the following properties as the request headers.
 | ---------------------- | ------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `Content-Type`         | `application/json`                         | Specifies the type of data in the request body                                                                                                                                                                                                    |
 | `User-Agent`           | `TFC/1.0 (+https://app.terraform.io; TFC)` | Identifies the request is coming from Terraform Cloud                                                                                                                                                                                             |
-| `X-TFC-Task-Signature` | string                                     | If the Run Task is configured with a [HMAC Key](cloud-docs/integrations/run-tasks#securing-your-run-task), this header will contain the signed SHA512 sum of the request payload using the configured HMAC key. Otherwise this is an empty string |
+| `X-TFC-Task-Signature` | string                                     | If the run task is configured with an [HMAC Key](cloud-docs/integrations/run-tasks#securing-your-run-task), this header contains the signed SHA512 sum of the request payload using the configured HMAC key. Otherwise, this is an empty string. |
 
 ## Run Task Callback
 
-Once a Run Task request has been fulfilled by the external integration it must call back into Terraform Cloud with the result. Terraform expects this callback within 10 minutes, or the request will be considered to have errored.
+Once a run task request has been fulfilled by the external integration, the integration must call back into Terraform Cloud with the result. Terraform expects this callback within 10 minutes, or the request will be considered to have errored.
 
 `PATCH :callback_url`
 
@@ -123,11 +122,9 @@ The PATCH request submits a JSON object with the following properties as a reque
 | `data.type`               | string | Must be `"task-results"`.                                                                       |
 | `data.attributes.status`  | string | The current status of the task. Only `passed` or `failed` indicate that the task has completed. |
 | `data.attributes.message` | string | (Optional) A short message describing the status of the task.                                   |
-| `data.attributes.url`     | string | (Optional) A URL where more information can be obtained about the task.                         |
+| `data.attributes.url`     | string | (Optional) A URL where users can obtain more information about the task.                         |
 
-Status values other than `passed` or `failed` are considered a partial update and will not complete the task within Terraform Cloud.
-This could be used by an External Service to send a `started` status with a URL so that a user could monitor the task at the External Service's website.
-The External Service can send another callback when the task completes.
+Status values other than `passed` or `failed` are considered a partial update and will not complete the task within Terraform Cloud. An External Service could use this to send a `started` status with a URL so that a user could monitor the task at the External Service's website. The External Service can send another callback when the task completes.
 
 ```json
 {
