--- a/content/cloud-docs/api-docs/run-tasks.mdx
+++ b/content/cloud-docs/api-docs/run-tasks.mdx
@@ -40,7 +40,7 @@ page_title: Run Tasks - API Docs - Terraform Cloud and Terraform Enterprise
 
 [Run tasks](/cloud-docs/workspaces/settings/run-tasks) allow Terraform Cloud to interact with external systems at specific points in the Terraform Cloud run lifecycle. Run tasks are reusable configurations that you can attach to any workspace in an organization. This page lists the API endpoints for run tasks in an organization and explains how to attach run tasks to workspaces.
 
-Refer to [Run Tasks Integration](/cloud-docs/api-docs/run-tasks-integration) for the API endpoints related triggering run tasks and the expected integration response.
+Refer to [run tasks Integration](/cloud-docs/api-docs/run-tasks-integration) for the API endpoints related triggering run tasks and the expected integration response.
 
 ## Required Permissions
 
