Fix broken links; remove article that no longer exists

--- a/content/enterprise/user-management/saml/idp-configuration/onelogin.mdx
+++ b/content/enterprise/user-management/saml/idp-configuration/onelogin.mdx
@@ -31,10 +31,8 @@ Verify the endpoint URLs, certificate, and attribute mappings are correct in the
 
 ## Additional Resources
 
-The following pages in the OneLogin documentation are relevant to using SAML SSO with Terraform Enterprise:
+[Create Mappings to Automatically Assign Roles to Users](https://onelogin.service-now.com/kb_view_customer.do?sysparm_article=KB0010625)
 
-* [Create Mappings to Automatically Assign Roles to Users](https://support.onelogin.com/hc/en-us/articles/211531266-User-Provisioning-An-End-to-End-Flow#create-mappings)
-* [Using Regex to Provision Members of AD/LDAP Groups to New App Groups](https://support.onelogin.com/hc/en-us/articles/209887623-Using-Regex-to-Provision-Members-of-AD-LDAP-Groups-to-New-App-Groups)
 
 ## Example SAMLResponse
 
