--- a/content/registry/api-docs.mdx
+++ b/content/registry/api-docs.mdx
@@ -697,7 +697,7 @@ Content-Type: text/html; charset=utf-8
 
 ## Get a Module Downloads Metrics Summary
 
--> **Note:** The download metrics summary APIs are `v2`and use its API `<base_url>` of
+-> **Note:** The download metrics summary APIs are `v2`and use the API `<base_url>` of
 `https://registry.terraform.io/v2/modules/`
 
 This endpoint returns a module's download metrics summary.
