a few easy cleanup items

--- a/content/cloud-docs/api-docs/variable-sets.mdx
+++ b/content/cloud-docs/api-docs/variable-sets.mdx
@@ -128,7 +128,7 @@ curl \
 
 ## Update a Variable Set
 
-`PUT/PATCH varsets/:varset_id`
+`PATCH varsets/:varset_id`
 
 | Parameter    | Description         |
 | ------------ | ------------------- |
